Fix right option tooltip from being squished

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -103,7 +103,7 @@
 .PollOption {
   margin-bottom: 15px;
   width: 45%;
-  margin-right: 5px;
+  margin-right: 15px;
   float: left;
 
   &:nth-child(odd) {
